# ngsolve_webgpu

./: .gitignore  README.md  pyproject.toml  redraw.ipynb  webgpu.ipynb  webgpu_talk_demos.ipynb
.github/workflows/: pages.yml  test.yml
docs/: Quickstart.ipynb  animation.ipynb  api.rst  clipping.ipynb  coefficient_functions.rst  complex_fields.ipynb  conf.py  create_landing.py  element_boundaries.ipynb  entity_numbers.ipynb  functions.ipynb  geometry.ipynb  getting_started.rst  index.rst  installation.rst  interactivity.rst  isosurface.ipynb  mesh.ipynb  mesh_geometry.rst  picking.ipynb  symmetry.ipynb  vectors.ipynb
examples/: vectors.ipynb
ngsolve_webgpu/: __init__.py  _version.py  animate.py  animation_loop.py  cf.py  clipping.py  contact.py  entity_numbers.py  facet_cf.py  geometry.py  isolines.py  isosurface.py  jupyter.py  lic.py  mesh.py  pick.py  pyramids_hex.py  region_visibility.py  surface_vectors.py  symmetry.py  vectors.py
ngsolve_webgpu/shaders/: clipping.wgsl  clipping_vectors.wgsl  compute_isosurface.wgsl  elements3d.wgsl  entity_numbers.wgsl  eval.wgsl  facet_edge.wgsl  geo_edge.wgsl  geo_face.wgsl  geo_vertex.wgsl  geometry.wgsl  highlight.wgsl  isolines.wgsl  isolines_clipping.wgsl  isolines_render.wgsl  isosurface.wgsl  mesh.wgsl  negative_surface.wgsl  numbers.wgsl  region_visibility.wgsl  (+8 more)
tests/: Dockerfile  conftest.py  run_tests.sh  test_basic.py  test_cf.py  test_curved_3d.py  test_curved_3d_clipping.py  test_curved_hex_prism.py  test_curved_wireframe.py  test_direct.py  test_entity_numbers.py  test_facet.py  test_isolines.py  test_mesh.py  test_transparency.py  test_vandermonde.py  test_vectors.py
(+22 files in other folders)
